# vish-backend

./: .env.example  README.md  db.json  manage.py  pyproject.toml
account/: models.py  serializers.py  views.py
account/migrations/: 0001_initial.py
core/management/commands/: generate-key.py
rate_card/: admin.py  apps.py  models.py  serializers.py  views.py
rate_card/migrations/: 0001_initial.py  0002_ratecard_include_rate_cards.py  0003_alter_ratecard_price_unit.py
vish/: asgi.py  settings.py  urls.py  wsgi.py
